--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react-id-swiper": "^4.0.0",
     "react-modal": "^3.16.1",
     "react-multistep": "^5.5.9",
+    "react-pdf": "^9.1.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.20.1",
     "react-secure-storage": "^1.3.2",
