--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose-auto-increment": "^3.0.1",
+    "motion": "^11.13.1",
     "p-limit": "^5.0.0",
     "pdfjs": "^2.5.3",
     "qs": "^6.12.2",
