--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.2",
-    "npm": "^10.2.5"
+    "npm": "^10.2.5",
+    "punycode": "^2.3.1"
   },
   "devDependencies": {
     "@types/qs": "^6.9.15"
